<resources>
    <string name="app_name">Waves of Food</string>
    <string name="enjoy_restaurant_quality_meals_at_home">Enjoy Restaurant Quality Meals at Home</string>
    <string name="next">Next</string>
    <string name="waves_of_food">Waves Of Food</string>
    <string name="deliver_favorite_food">Deliver Favorite Food</string>
    <string name="password">Password</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="facebook">Facebook</string>
    <string name="continue_with">Continue With</string>
    <string name="or">Or</string>
    <string name="google">Google</string>
    <string name="login">Login</string>
    <string name="design_by_nomprakash">Design By\nOmprakash</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="name">Name\n</string>
    <string name="sign_up_with">Sign Up With</string>
    <string name="create_account">Create Account</string>
    <string name="don_t_have_account">Don’t Have Account?</string>
    <string name="choose_your_location">Choose Your Location</string>
    <string name="choose_location">Choose Location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>